objects/Manuterm_Customer_Detail__c/Manuterm_Customer_Detail__c.object-meta.xml
<CustomObject>
    <label>Manuterm Prospect Detail</label>
    <nameField>
        <displayFormat>Customer-{0000000000}</displayFormat>
        <label>Manuterm Calculation Submit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manuterm Prospect Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>