objects/Manuterm_Customer_Detail__c/fields/Customer_Age__c.field-meta.xml
<CustomField>
    <fullName>Customer_Age__c</fullName>
    <label>Customer Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>