objects/Manuterm_Customer_Detail__c/fields/Customer_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country_Code__c</fullName>
    <label>Customer Country Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>