objects/Manuterm_Customer_Detail__c/fields/Customer_Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Coverage_Amount__c</fullName>
    <label>Customer Coverage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>