objects/Manuterm_Customer_Detail__c/fields/Customer_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Mode__c</fullName>
    <label>Customer Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>annual</fullName>
                <isActive>false</isActive>
                <label>annual</label>
            </value>
            <value>
                <fullName>month</fullName>
                <isActive>false</isActive>
                <label>month</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>