objects/Manuterm_Customer_Detail__c/fields/Customer_Premium__c.field-meta.xml
<CustomField>
    <fullName>Customer_Premium__c</fullName>
    <label>Customer Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>