objects/Manuterm_Customer_Detail__c/fields/Customer_Sex__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sex__c</fullName>
    <label>Customer Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>