objects/Manuterm_Customer_Detail__c/fields/Existing_Manulife_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Manulife_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Manulife Customer</label>
    <type>Checkbox</type>
</CustomField>