objects/Manuterm_Customer_Detail__c/fields/Smoker__c.field-meta.xml
<CustomField>
    <fullName>Smoker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoker</label>
    <type>Checkbox</type>
</CustomField>